modules/webserver/main.tf

// Create a security group
resource "aws_security_group" "utkal_sg" {
  name        = "utkal_sg"
  description = "Allow TLS inbound traffic"
  vpc_id      = var.vpc_id

  // Inbound rule for SSH access to local laptop  
  ingress {
    description = "SSH from Local laptop"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = var.ssh_ip
  }

  // Inbound rule for HTTP access for everyone
  ingress {
    description = "HTTP from everywhere"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = var.http_ip
  }

  // Inbound rule for node app on port 3000 (installed via ansible)
  ingress {
    description = "HTTP from everywhere"
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = var.http_ip
  }

  // Outbound rule to not limit any port or any protocol
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]

  }

  tags = {
    Name = "${var.env_prefix}-sg"
  }
}


// First choose AMI for the instance with the filter
data "aws_ami" "utkal-ami" {
  most_recent = true
  owners      = ["amazon"]
  filter {
    name   = "name"
    values = var.image_name
  }

}

resource "aws_key_pair" "utkal-key-pair" {
  // Create a key name through which it can be referred
  key_name = "learn-terraform-key"

  // this is the local public key located in .ssh/id_rsa_pub 
  public_key = file(var.public_key_location)
}

resource "aws_instance" "utkal-EC2" {
  // Use the ami id that matches the desired description
  ami = data.aws_ami.utkal-ami.id

  // drive instance type as a parameter for flexibility
  instance_type = var.instance_type

  // subnet id should match to the subnet created above in the custom vpc
  subnet_id = var.subnet_from_module_id

  // associated the configured SG above
  vpc_security_group_ids = [aws_security_group.utkal_sg.id]

  // associate AZ to be in the same AZ as that of the subnet above
  availability_zone = var.def_az

  // Allow external IP to access the instance
  associate_public_ip_address = true

  // Associate the key pair to be able to allow access to the instance via SSH
  key_name = aws_key_pair.utkal-key-pair.key_name

  tags = {
    Name = "${var.env_prefix}-server-instance"
  }

}

// create a null resource that does not create new resource, rather runs ansible script in the EC2 created above
resource "null_resource" "configure-server-ansible" {
  // run this resource only the following trigger is changed
  triggers = {
    trigger = aws_instance.utkal-EC2.public_ip
  }

  // following segment is to run a command
  provisioner "local-exec" {

    // change to directory with ansible playbook so the entire eco system can be referred
    working_dir = "/Users/utkalnayak/code/ansible/learn-ansible"
    // following command invoked to run the ansible playbook
    // pass the IP address dynamically by sending argument through inventory (default value in the hosts file)
    // specify IP addresses with comma separation (comma needed even if there is one IP)
    command = "ansible-playbook --inventory ${aws_instance.utkal-EC2.public_ip}, --private-key ${var.private_ssh_key} --user ec2-user docker-deploy-ec2.yaml"

  }
}
